src/objects/ProductItem.object
<CustomObject>
    <fields>
        <fullName>AdditionalProducts__c</fullName>
        <description>Accessories usually shipped with the main product. Added manually by the admins</description>
        <label>Additional Products</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ArticleSKU__c</fullName>
        <description>Article number from Product record</description>
        <formula>Product2.Article__c</formula>
        <label>Article (SKU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BarCode__c</fullName>
        <description>Placeholder for bar code information to be populated through field service integration.</description>
        <label>Bar Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchNumber__c</fullName>
        <description>Batch number of the inventory item. Populated through AX/Field Service integration</description>
        <label>Batch Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ControlledByIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field must be True for Items created and maintained by integration</description>
        <label>Controlled By Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERPWarehouse__c</fullName>
        <label>ERP Warehouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <inlineHelpText>Custom Serial Number used by Field Service users</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Deactivate an item instead of deleting</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TF_FullProductInfo__c</fullName>
        <description>Used to facilitate the selection of product items</description>
        <formula>TF_ProductName__c&amp;&quot; | &quot;&amp;SerialNumber</formula>
        <label>TF_Full ProductInfo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_ProductName__c</fullName>
        <formula>Product2.Name&amp;&quot; | &quot;&amp; Product2.Article__c</formula>
        <label>TF_ProductName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Unique External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_ProductItems</fullName>
        <columns>Name</columns>
        <columns>Product2</columns>
        <columns>Location</columns>
        <columns>QuantityOnHand</columns>
        <columns>SerialNumber</columns>
        <columns>CreatedBy</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Items</label>
    </listViews>
    <listViews>
        <fullName>My_ProductItems</fullName>
        <filterScope>Mine</filterScope>
        <label>My Product Items</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>